PN-15181: Resolved CR comments. Updated API definitions: made partnerId an header parameter, added API tags (write and read), added auto-generation of locationId in insert API.
